--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -1,1 +1,231 @@
 
+@media screen and (max-width: 800px) {
+   
+    .main-container{
+        
+        .home-section{
+
+           .overlay{
+
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            width:100vw;
+            flex-wrap: wrap;
+            flex-direction: column-reverse;
+
+                
+            
+
+
+            .home-content{
+                width:100%;
+                height:auto;
+
+               
+
+                h1{
+                    font-size:30px;
+                }
+                p{
+                    font-size:20px;
+                    width:100%;
+                    text-align: left;
+                }
+                
+            }
+            svg{
+                height:200px;
+                position:relative;
+                left:-50px;
+            }
+           
+            
+
+           }
+
+        }
+        .about-section{
+            h1{
+                font-size:30px;
+            }
+            .about-services{
+                width:100%;
+                .about-card{
+
+                    height:150px;
+                    width:150px;
+                    margin:10px;
+
+
+                    .icon{
+                        width:50px;
+                        height:auto;
+                        position:relative;
+                        top:25px;
+
+
+
+                    }
+                    h1{
+                        font-size:15px;
+                        line-height:10px;
+                        position: relative;
+                        top:30px;
+                    }
+                    p{
+                        font-size:10px;
+                    }
+                }
+
+            }
+            p{
+                width:90%;
+                font-weight:700;
+                font-size:15px;
+            }
+        }
+        .domains{
+            h1{
+                font-size:30px;
+                font-weight: 400
+                
+                
+                ;
+            }
+            p{
+                width:90%;
+                text-align: justify;
+                font-size:15px;
+                font-family: 'Poppins', sans-serif;
+                font-weight: 700;
+            }
+            .domain-cards{
+               
+                width:100%;
+                height:auto;
+                .subdomains{
+
+                    height:80px;
+                    width:70px;
+
+                    img{
+                        width:50px;
+                        height:auto;
+
+                    }
+                    h2{
+                        font-size:15px;
+                    }
+
+                }
+                
+            }
+        }
+
+        .partners{
+            h1{
+                font-size:30px;
+            }
+            .partner-container{
+                width:100%;
+                .subdomains{
+
+                    height:80px;
+                    width:70px;
+
+                    img{
+                        width:50px;
+                        height:auto;
+
+                    }
+                    h2{
+                        font-size:15px;
+                    }
+
+                }
+
+
+            }
+        }
+        .our-team{
+            h1{
+                font-size:30px;
+            }
+
+            .executives{
+
+                display:flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+
+                .chinmay{
+                    width:85%;
+                    text-align: center;
+                    display:flex;
+                    justify-content:center;
+                    align-items:center;
+                    flex-wrap: wrap;
+                    .avatar{
+                        height:200px;
+                    }
+                    .description{
+                        text-align: center;
+                        .title{
+                            h1{
+                                text-align: center;
+                                font-size:20px;
+                                
+                            }
+                            h4{
+    
+                                text-align:center;
+                                font-size:18px;
+                                
+                            }
+                        }
+                        p{
+                            text-align: justify;
+                        }
+                    }
+
+                }
+                .riddhi{
+                    width:85%;
+                    text-align: center;
+                    display:flex;
+                    justify-content:center;
+                    align-items:center;
+                    flex-wrap: wrap;
+                    .avatar{
+                        height:200px;
+                    }
+                    .description{
+                        text-align: center;
+                        .title{
+                            h1{
+                                text-align: center;
+                                
+                            }
+                            h4{
+    
+                                text-align:center;
+                                
+                            }
+                        }
+                        p{
+                            text-align: justify;
+                        }
+                    }
+
+                }
+
+
+            }
+
+        }
+           
+
+    }
+  }
