--- a/pages/responisve-team.css
+++ b/pages/responisve-team.css
@@ -122,5 +122,14 @@ footer a{
 footer p.location{
  
     line-height:30px;
+    font-size:18px;
+    text-align: justify;
 
 }
+
+@media screen and (max-width: 800px) {
+   
+    .main-container{
+        overflow-x: hidden;
+    }
+  }
