--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,34 @@
 @media screen and (max-width: 800px) {
+  .responsive-navbar {
+    height: 60px;
+    width: 100vw;
+    background: white;
+    -webkit-box-shadow: 0px 0px 100px 10px rgba(0, 0, 0, 0.808);
+            box-shadow: 0px 0px 100px 10px rgba(0, 0, 0, 0.808);
+    display: block;
+    position: fixed;
+    bottom: 0;
+    z-index: 99;
+  }
+  .responsive-navbar .nav-container {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .responsive-navbar .nav-container .link {
+    height: 50px;
+    width: 50px;
+  }
+  .responsive-navbar .nav-container .link a .link-image {
+    height: 40px;
+  }
   .main-container .home-section .overlay {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -79,6 +109,7 @@
   .main-container .domains .domain-cards {
     width: 100%;
     height: auto;
+    border-radius: 0px;
   }
   .main-container .domains .domain-cards .subdomains {
     height: 80px;
