--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -1,6 +1,41 @@
 
 @media screen and (max-width: 800px) {
-   
+
+    .responsive-navbar{
+
+        height:60px;
+        width:100vw;
+        background: rgb(255, 255, 255);
+        box-shadow:0px 0px 100px 10px rgba(0, 0, 0, 0.808);
+        display:block;
+        position:fixed;
+        bottom:0;
+        z-index: 99;
+        .nav-container{
+            width:100%;
+            height:100%;
+            display:flex;
+            justify-content:space-around
+            ;
+            align-items: center;
+            .link{
+
+                height:50px;
+                width:50px;
+                a{
+                .link-image{
+                    height:40px;
+                }
+                }
+
+            }
+
+        }
+        
+
+
+    }
+
     .main-container{
         
         .home-section{
@@ -22,7 +57,7 @@
                 width:100%;
                 height:auto;
 
-               
+
 
                 h1{
                     font-size:30px;
@@ -39,10 +74,10 @@
                 position:relative;
                 left:-50px;
             }
-           
+
             
 
-           }
+        }
 
         }
         .about-section{
@@ -104,6 +139,7 @@
                
                 width:100%;
                 height:auto;
+                border-radius: 0px;;
                 .subdomains{
 
                     height:80px;
