--- a/css/main.scss
+++ b/css/main.scss
@@ -261,9 +261,9 @@ $heading-color:#200542;
                 width:200px;
                 background: rgb(245, 245, 245);
                 padding:20px;
-               color: rgb(41, 41, 41);
-              
-               border-radius: 5px;;
+                color: rgb(41, 41, 41);
+                
+                border-radius: 5px;;
                 margin:30px;
                 display:flex;
                 flex-direction: column;
@@ -522,6 +522,145 @@ $heading-color:#200542;
 
 
     }
+    .events-container {
+
+        height:auto;
+        width:100vw;
+
+        .hero-event{
+            height:40vh;
+            width:100vw;
+            
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            flex-direction: column;
+            overflow: hidden;
+            position:relative;
+            background-image: url('../assets/bg.jpg');
+            color:white;
+            .hero-image{
+               
+                width:80%;bottom:-220px;
+
+
+            }
+            .upcomingEvent{
+                
+                font-family: 'Poppins',sans-serif;
+                
+                font-size:40px;
+            }.countdowntoevent{
+                
+                bottom:70px;
+                font-family: 'Poppins',sans-serif;
+                font-size:25px;
+            }
+            .upevent{
+    
+                border:none;
+                
+                padding:10px;
+                outline: none;
+                font-size:17px;
+                color:white;
+                border-radius: 5px;;
+               margin-top:20px;
+                transition:all 100ms ease-in;
+                
+                background: #c62a88;
+                &:hover{
+                    
+                    cursor: pointer;
+                    transition:all 100ms ease-in;
+                    box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
+                    transform:scale(1.1);
+                }
+                }
+
+
+
+        }
+        .events{
+
+            display:flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+            width:80%;
+            margin:auto;
+            margin-top:10px;
+            .event-card{
+                height:auto;;
+                width:255px;
+                padding:10px;
+                
+                border-radius: 10px;
+                margin:20px;
+                display:flex;
+                justify-content:space-between;
+                flex-direction:column;
+                align-items:center;
+                background:#eee;
+
+                &:hover img{
+                    position:relative;
+                    top:-20px;
+                    
+                    box-shadow:0px 10px 20px 0px rgba(0, 0, 0, 0.438);
+                    transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
+                    transition:all 500ms ease;
+
+                }
+
+
+                .event-image{
+                    height:50%;
+                    width:100%;
+                    transition:all 500ms ease;
+                    border:none;
+                    border-radius: 10px;;
+                }
+                .event-details{
+                    text-align: center;
+                    h2{
+                        font-family: 'Poppins', sans-serif;
+                    }
+                    p{
+                        text-align: justify;
+                        font-size:15px;
+                        font-family: 'Poppins', sans-serif;
+                    }
+                    .moreaboutevent{
+                        
+                            border:none;
+                            
+                            padding:10px;
+                            outline: none;
+                            font-size:17px;
+                            color:white;
+                            border-radius: 5px;;
+                            
+                            transition:all 100ms ease-in;
+                            
+                            background: #c62a88;
+                            &:hover{
+                                
+                                cursor: pointer;
+                                transition:all 100ms ease-in;
+                                // box-shadow: 0px 0px 10px 5px rgba(105, 0, 226, 0.705);
+                                transform:scale(1.03);
+                            }
+
+                    }
+                }
+               
+            }
+
+        }
+
+    }
+
 
    
 }
