--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,6 +26,10 @@
     height: 50px;
     width: 50px;
   }
+  .responsive-navbar .nav-container .link:hover {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
   .responsive-navbar .nav-container .link a .link-image {
     height: 40px;
   }
