--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -22,6 +22,10 @@
 
                 height:50px;
                 width:50px;
+                &:hover{
+                    transform:scale(1.5);
+                    
+                }
                 a{
                 .link-image{
                     height:40px;
@@ -261,7 +265,7 @@
             }
 
         }
-           
+
 
     }
-  }
+}
