--- a/css/main.css
+++ b/css/main.css
@@ -715,7 +715,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #eee;
+  background: #f3f3f3;
+  -webkit-box-shadow: 0px 0px 50px 0px #ccc;
+          box-shadow: 0px 0px 50px 0px #ccc;
 }
 
 .main-container .events-container .events .event-card:hover img {
