--- a/css/main.scss
+++ b/css/main.scss
@@ -601,7 +601,8 @@ $heading-color:#200542;
                 justify-content:space-between;
                 flex-direction:column;
                 align-items:center;
-                background:#eee;
+                background:rgb(243, 243, 243);
+                box-shadow:0px 0px 50px 0px #ccc;
 
                 &:hover img{
                     position:relative;
