--- a/css/main.css
+++ b/css/main.css
@@ -615,8 +615,22 @@ body {
 }
 
 .main-container .events-container {
-  height: auto;
+  min-height: 100vh;
   width: 100vw;
+  background: #e7e7e7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-container .events-container .hero-event {
@@ -681,18 +695,19 @@ body {
 }
 
 .main-container .events-container .events {
+  padding-bottom: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 80%;
-  margin: auto;
   margin-top: 10px;
 }
 
@@ -716,8 +731,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background: #f3f3f3;
-  -webkit-box-shadow: 0px 0px 50px 0px #ccc;
-          box-shadow: 0px 0px 50px 0px #ccc;
+  -webkit-box-shadow: -10px -10px 20px 0px white, 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: -10px -10px 20px 0px white, 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 .main-container .events-container .events .event-card:hover img {
@@ -732,7 +747,7 @@ body {
 }
 
 .main-container .events-container .events .event-card .event-image {
-  height: 50%;
+  height: 60%;
   width: 100%;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
