--- a/css/main.scss
+++ b/css/main.scss
@@ -524,9 +524,13 @@ $heading-color:#200542;
     }
     .events-container {
 
-        height:auto;
+        min-height:100vh;
         width:100vw;
-
+        background: rgb(231, 231, 231);
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
         .hero-event{
             height:40vh;
             width:100vw;
@@ -582,13 +586,14 @@ $heading-color:#200542;
 
         }
         .events{
+            padding-bottom:30px;
 
             display:flex;
-            justify-content: space-around;
+            justify-content:center;
             align-items: center;
             flex-wrap: wrap;
             width:80%;
-            margin:auto;
+            
             margin-top:10px;
             .event-card{
                 height:auto;;
@@ -602,7 +607,8 @@ $heading-color:#200542;
                 flex-direction:column;
                 align-items:center;
                 background:rgb(243, 243, 243);
-                box-shadow:0px 0px 50px 0px #ccc;
+               
+                box-shadow:-10px -10px 20px 0px rgb(255, 255, 255),10px 10px 20px 0px rgba(0, 0, 0,0.2);
 
                 &:hover img{
                     position:relative;
@@ -616,7 +622,7 @@ $heading-color:#200542;
 
 
                 .event-image{
-                    height:50%;
+                    height:60%;
                     width:100%;
                     transition:all 500ms ease;
                     border:none;
