--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,78 @@
+html {
+  scroll-behavior: smooth;
+  -ms-scroll-snap-type: proximity;
+      scroll-snap-type: proximity;
+}
+
 body {
   margin: 0;
   padding: 0;
-  -ms-scroll-snap-type: proximity;
-      scroll-snap-type: proximity;
   font-family: 'Poppins',san-serif;
   overflow-x: hidden;
 }
 
 .responsive-navbar {
   display: none;
+}
+
+.navbar {
+  font-family: 'Poppins', sans-serif;
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #4b006e81;
+  color: white;
+}
+
+.navbar .nav-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25%;
+}
+
+.navbar .nav-left .nav-link-left {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.navbar .logo {
+  height: 70px;
+}
+
+.navbar .nav-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25%;
+}
+
+.navbar .nav-right .nav-link-right {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .main-container {
@@ -61,13 +125,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.main-container .home-section .overlay .home-content .logo {
-  height: 10%;
-  position: absolute;
-  top: 20px;
-  left: 50%;
 }
 
 .main-container .home-section .overlay .home-content h1 {
@@ -338,7 +395,7 @@ body {
 }
 
 .main-container .partners .partner-container {
-  width: 70%;
+  width: 80%;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -617,7 +674,7 @@ body {
 .main-container .events-container {
   min-height: 100vh;
   width: 100vw;
-  background: #e7e7e7;
+  background: #e4e4e4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -634,7 +691,7 @@ body {
 }
 
 .main-container .events-container .hero-event {
-  height: 40vh;
+  height: 50vh;
   width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
