navbar added and functional

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,6 +33,9 @@
   .responsive-navbar .nav-container .link a .link-image {
     height: 40px;
   }
+  .navbar {
+    display: none;
+  }
   .main-container .home-section .overlay {
     display: -webkit-box;
     display: -ms-flexbox;
